✨feat: contar respostas
